--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,7 +8,7 @@ html {
     box-sizing: inherit;
 }
 
-body {
+.page {
     font-family: 'Raleway', sans-serif;
     margin: 0;
     display: flex;
@@ -17,12 +17,21 @@ body {
     height: 100vh;
     color: white;
     background-color: black;
-    background-repeat: no-repeat;
-    background-size: cover;
+    overflow: hidden;
 }
+ .page__background-image {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     z-index: -1;
+ }
 
-blockquote {
-    font-size: 64px;
+.page__quote {
+    text-align: center;
+    font-size: 60px;
     text-shadow: 0 0 10px black;
     line-height: 1.3em;
     padding: 2em;
@@ -30,3 +39,5 @@ blockquote {
     border-radius: 1em;
     backdrop-filter: blur(10px);
 }
+
+
